--- a/404.html
+++ b/404.html
@@ -255,7 +255,7 @@
     
     <section class="powerby">
         
-            分享快乐 <br/>
+            教你登duang郎 <br/>
         Built with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> <br />
         主题 <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="3.14.0">Stack</a></b> 由 <a href="https://jimmycai.com" target="_blank" rel="noopener">Jimmy</a> 设计
     </section>
