--- a/p/proxy/index.html
+++ b/p/proxy/index.html
@@ -121,6 +121,28 @@ v2free VPN
 [purefast VPN专用脚本](Qiuyebai-1226/PFvpn-checkin: 用于PFvpn自动签到，适用于nonebot2 (github.com))
 因为PFvpn添加了5秒盾等措施，通用脚本失效，因此采用了playwright模拟浏览器行为进行签到，签到完成后会对签到结果进行截图。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://loli.tc/images/0064e2d28ae7eb4548b.jpg' />
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNE00641VK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QNE00641VK', { 'anonymize_ip': false });
+}
+</script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-QNE00641VK', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="
     article-page
@@ -304,9 +326,7 @@ v2free VPN
             </a>
         </li>
         
-        <div class="number">
-            <a href="https://www.bfcounter.vip/"><img src="https://www.bfcounter.vip/generatepic?userid=9316dd72-df58-4a76-ab05-0c1f07fb3fd8" alt="Page Counter" border="0"></a>
-        </div>
+        
         <div class="menu-bottom-section">
                 <li id="i18n-switch">  
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
