--- a/p/优质网站分享/index.html
+++ b/p/优质网站分享/index.html
@@ -22,6 +22,28 @@
 图片无审核，上传最大限制50MB（登陆后），不限制数量 可创建私密相册，仅通过链接访问，非常优秀
 这里曾有一堆涩图，但是某个天杀的给我举办了，域名享年16H 也不知道在国外注册的域名会不会再次被举办，从心保命。"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://loli.tc/images/003b880f716f90841c7.jpg' />
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNE00641VK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QNE00641VK', { 'anonymize_ip': false });
+}
+</script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-QNE00641VK', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="
     article-page
@@ -205,9 +227,7 @@
             </a>
         </li>
         
-        <div class="number">
-            <a href="https://www.bfcounter.vip/"><img src="https://www.bfcounter.vip/generatepic?userid=9316dd72-df58-4a76-ab05-0c1f07fb3fd8" alt="Page Counter" border="0"></a>
-        </div>
+        
         <div class="menu-bottom-section">
                 <li id="i18n-switch">  
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
