--- a/友链/index.html
+++ b/友链/index.html
@@ -18,6 +18,28 @@ This page&amp;rsquo;s frontmatter:
 <meta name="twitter:description" content="To use this feature, add links section to frontmatter.
 This page&amp;rsquo;s frontmatter:
 1 2 3 4 5 6 7 8 9 links: - title: GitHub description: GitHub is the world&amp;#39;s largest software development platform. website: https://github.com image: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png - title: TypeScript description: TypeScript is a typed superset of JavaScript that compiles to plain JavaScript. website: https://www.typescriptlang.org image: ts-logo-128.jpg image field accepts both local and external images.">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNE00641VK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QNE00641VK', { 'anonymize_ip': false });
+}
+</script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-QNE00641VK', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="
     article-page
@@ -201,9 +223,7 @@ This page&amp;rsquo;s frontmatter:
             </a>
         </li>
         
-        <div class="number">
-            <a href="https://www.bfcounter.vip/"><img src="https://www.bfcounter.vip/generatepic?userid=9316dd72-df58-4a76-ab05-0c1f07fb3fd8" alt="Page Counter" border="0"></a>
-        </div>
+        
         <div class="menu-bottom-section">
                 <li id="i18n-switch">  
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
