--- a/p/hugo初体验/index.html
+++ b/p/hugo初体验/index.html
@@ -33,6 +33,28 @@
 但是bilibili的视频可以用shortcode插入 代码插入练习 代码应该是有高亮和复制功能的，但是设置无效(已解决，换个主题就好了)
 单行代码 pip install nsfw
 多行代码 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 #!">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNE00641VK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QNE00641VK', { 'anonymize_ip': false });
+}
+</script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-QNE00641VK', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="
     article-page
@@ -216,9 +238,7 @@
             </a>
         </li>
         
-        <div class="number">
-            <a href="https://www.bfcounter.vip/"><img src="https://www.bfcounter.vip/generatepic?userid=9316dd72-df58-4a76-ab05-0c1f07fb3fd8" alt="Page Counter" border="0"></a>
-        </div>
+        
         <div class="menu-bottom-section">
                 <li id="i18n-switch">  
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
