--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,29 @@
 <meta property='og:site_name' content='夜秋白の小黑屋'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://elysia.com/search/index.json"><link rel="preload" href="https://elysia.com/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://elysia.com/search/index.json">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QNE00641VK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-QNE00641VK', { 'anonymize_ip': false });
+}
+</script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-QNE00641VK', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<link rel="preload" href="https://elysia.com/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -193,9 +215,7 @@
             </a>
         </li>
         
-        <div class="number">
-            <a href="https://www.bfcounter.vip/"><img src="https://www.bfcounter.vip/generatepic?userid=9316dd72-df58-4a76-ab05-0c1f07fb3fd8" alt="Page Counter" border="0"></a>
-        </div>
+        
         <div class="menu-bottom-section">
                 <li id="i18n-switch">  
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
