修改链接错误

--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>https://elysia.com</title>
-    <link rel="canonical" href="https://elysia.com">
+    <title>https://elysia.club</title>
+    <link rel="canonical" href="https://elysia.club">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://elysia.com">
+    <meta http-equiv="refresh" content="0; url=https://elysia.club">
   </head>
 </html>
